2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: add ability to do snapshot releases to the
	cairographics.org/snapshots/ directory in addition to official releases
	* configure.in: bumped the revision to 1.1.10 in preparation for a snapshot
	release of the 1.2 API
	* docs/reference/Makefile.am: fixed some distcheck errors

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* .cvsignore, cairomm/.cvsignore: ignore some autotools files and *.swp
	files (from vim)

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/scaledfont.cc, cairomm/scaledfont.h: wrap ScaledFont, including
	new API for cairo 1.2
	* cairomm/Makefile.am: add scaledfont.* to list of sources

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/surface.h: Remove comments stating that PDF, PS, and SVG are
	experimental surfaces.  As of 1.2.0, these three surfaces are officially
	supported by the cairo library.

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/xlib_surface.h: add a bit more documentation for the new
	XlibSurface API

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/surface.cc, cairomm/surface.h: added SvgSurface::get_versions()
	and SvgSurface::version_to_string() API.  They're implemented as static
	members right now.

2006-06-30  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: bumped cairomm version to 0.7.0 and bumped cairo requirement
	to 1.2.0

2006-06-30  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/xlib_surface.cc, cairomm/xlib_surface.h: add new get_height() and
	get_width() API to XlibSurface

2006-06-27  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/enums.h: Added enum types to support the new get_type() and SVG
	Version API 
	* cairomm/fontface.cc, cairomm/fontface.h: add new get_type() API
	* cairomm/pattern.cc, cairomm/pattern.h: add new get_type() API